# karxbot

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  compose.yml  example.config.toml
.github/workflows/: docker-image.yml
src/: characters.rs  dialogue.rs  main.rs
