[package]
name = "rpbot-hs"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.19", features = ["toml"] }
poise = "0.6.1"
regex = "1.11.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
